--- a/optimal method hyperparameters.ipynb
+++ b/optimal method hyperparameters.ipynb
@@ -2,18 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pysors\n",
-    "import numpy as np\n",
     "\n",
+    "import optforge as of\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def rosenbrock(arr):\n",
     "    x,y = arr\n",
     "    a = 1\n",
     "    b = 100\n",
-    "    return (a - x) ** 2 + b * (y - x ** 2) ** 2\n"
+    "    return (a - x) ** 2 + b * (y - x ** 2) ** 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def objective(t:of.Trial):\n",
+    "\n",
+    "    method = pysors.RSPI_SPSA(\n",
+    "        a_init = t.suggest_float('a', 1e-8, 10, domain='log2'),\n",
+    "        c_init = t.suggest_float('c', 1e-8, 10, domain='log2'),\n",
+    "        beta = t.suggest_float('beta', 1e-8, 10, ),\n",
+    "        sigma_1 = t.suggest_float('sigma_1', 1e-8, 10, ),\n",
+    "        sigma_2 = t.suggest_float('sigma_2', 1e-8, 10, ),\n",
+    "        distribution = t.suggest_categorical('distribution', ['Normal', 'Uniform']),\n",
+    "        step_upd = t.suggest_categorical('step_upd', ['half', 'inv', 'inv_sqrt']),\n",
+    "        theta = t.suggest_float('theta', 1e-8, 10, ),\n",
+    "        T_half = t.suggest_int('T_half', 1, 1000, ),\n",
+    "        T_power = t.suggest_int('T_half', 1, 1000, ),\n",
+    "    )\n",
+    "\n",
+    "    vals = []\n",
+    "    for i in range(10):\n",
+    "        res = pysors.minimize(rosenbrock, [-3,-4], method, stopval=None, maxfun=1000)\n",
+    "        vals.append(res.value)\n",
+    "\n",
+    "    return sum(vals)"
    ]
   },
   {
@@ -98,31 +136,6 @@
     }
    ],
    "source": [
-    "import optforge as of\n",
-    "\n",
-    "def objective(t:of.Trial):\n",
-    "\n",
-    "    method = pysors.RSPI_SPSA(\n",
-    "        a_init = t.suggest_float('a', 1e-8, 10, domain='log2'),\n",
-    "        c_init = t.suggest_float('c', 1e-8, 10, domain='log2'),\n",
-    "        beta = t.suggest_float('beta', 1e-8, 10, ),\n",
-    "        sigma_1 = t.suggest_float('sigma_1', 1e-8, 10, ),\n",
-    "        sigma_2 = t.suggest_float('sigma_2', 1e-8, 10, ),\n",
-    "        distribution = t.suggest_categorical('distribution', ['Normal', 'Uniform']),\n",
-    "        step_upd = t.suggest_categorical('step_upd', ['half', 'inv', 'inv_sqrt']),\n",
-    "        theta = t.suggest_float('theta', 1e-8, 10, ),\n",
-    "        T_half = t.suggest_int('T_half', 1, 1000, ),\n",
-    "        T_power = t.suggest_int('T_half', 1, 1000, ),\n",
-    "    )\n",
-    "\n",
-    "    vals = []\n",
-    "    for i in range(10):\n",
-    "        res = pysors.minimize(rosenbrock, [-3,-4], method, stopval=None, maxfun=1000)\n",
-    "        vals.append(res.value)\n",
-    "\n",
-    "    return sum(vals)\n",
-    "\n",
-    "\n",
     "study = of.minimize_trial_func(objective, 'optuna.tpe', max_evals=1000)\n",
     "study.best_params"
    ]
@@ -145,6 +158,28 @@
    ],
    "source": [
     "study.history.plot_convergence()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'objective' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m study \u001b[38;5;241m=\u001b[39m of\u001b[38;5;241m.\u001b[39mminimize_trial_func(\u001b[43mobjective\u001b[49m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mng.NgIohTuned\u001b[39m\u001b[38;5;124m'\u001b[39m, max_evals\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1000\u001b[39m)\n\u001b[0;32m      2\u001b[0m study\u001b[38;5;241m.\u001b[39mbest_params\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'objective' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "study = of.minimize_trial_func(objective, 'ng.NgIohTuned', max_evals=1000)\n",
+    "study.best_params"
    ]
   }
  ],
