--- a/example.ipynb
+++ b/example.ipynb
@@ -1,18 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Minimize interface"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lowest value: 9.863907759096913e-09\n",
-      "number of function evaluations: 13749\n",
+      "lowest value: 9.93500330559321e-09\n",
+      "number of function evaluations: 13248\n",
       "You can access the solution array under `x` attribute.\n",
-      "[0.99990445 0.99980621]\n"
+      "res.x = array([0.99990304, 0.99980378])\n"
      ]
     }
    ],
@@ -20,16 +27,26 @@
     "import pysors\n",
     "import numpy as np\n",
     "\n",
+    "# define objective function\n",
     "def rosenbrock(arr):\n",
     "    x,y = arr\n",
     "    a = 1\n",
     "    b = 100\n",
     "    return (a - x) ** 2 + b * (y - x ** 2) ** 2\n",
     "\n",
+    "# minimize it\n",
+    "res = pysors.minimize(rosenbrock, x0 = np.array([-3.,-4.]), method = 'bds', stopval=1e-8)\n",
     "\n",
-    "res = pysors.minimize(rosenbrock, [-3,-4], 'bds', stopval=1e-8)\n",
+    "# results\n",
     "print(res)\n",
-    "print(res.x)"
+    "print(f'{res.x = }')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Step interface"
    ]
   },
   {
@@ -61,12 +78,14 @@
     "x = np.array([-3., -4.])\n",
     "opt = pysors.RSPI_SPSA(**hyperparams)\n",
     "\n",
+    "# do 1000 steps.\n",
+    "# note that each step evaluates the objective function multiple times.\n",
     "for i in range(1000):\n",
     "    x = opt.step(rosenbrock, x)\n",
     "\n",
     "\n",
-    "print(x)\n",
-    "print(rosenbrock(x))"
+    "print(x) # last array (not necessarily best!)\n",
+    "print(rosenbrock(x)) # value at last array"
    ]
   }
  ],
